--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "element-plus": "^2.4.1",
     "fast-glob": "^3.3.1",
     "vite-plugin-svg-icons": "^2.0.1",
