--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "element-plus": "^2.4.1",
     "fast-glob": "^3.3.1",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@types/node": "^20.8.8",
